objects/Child_1__c.object
<CustomObject>
    <fields>
        <fullName>Parent_LookUp__c</fullName>
        <label>Parent_1</label>
        <referenceTo>Parent_1__c</referenceTo>
        <relationshipLabel>Child_1s</relationshipLabel>
        <relationshipName>Child_1s</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Text_1__c</fullName>
        <label>Text 1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Text_2__c</fullName>
        <label>Text 2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Child_1</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Parent_LookUp__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Child_1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Child_1s</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>